# I-Manual-Pizzlebot-I

./: README.md
cpp_camera/: CMakeLists.txt
cpp_camera/src/: yolo (Copy 2).cpp  yolo (Copy).cpp  yolo.cpp
libfmt/: libfmt-dev_9.1.0+ds1-2_arm64.deb
